# obos-strap

./: .gitignore  CMakeLists.txt  LICENSE  README.md  obos-strap-bash_autocomplete  recipes.md  recipes.schema.json
src/: CMakeLists.txt  build_bin_pkg.c  build_pkg.c  buildall.c  clean.c  cmd.c  lock.c  lock.h  main.c  package.c  package.h  path.h  update.c  update.h
tests/: obos-strap  settings.json  settings.prefix-override.json
tests/recipes/: bash.json  empty.json  hello.json  test-obos-strap-env.json  test-substitution.json
